fix menu on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -93,12 +93,23 @@ a.btn {
 
 // header
 
+nav {
+  ul {
+    list-style-type: none;
+  }
+  
+  li {
+    display: inline-block;
+  }
+}
+
 a.navbar-brand {
   color: $color_two;
   font-size: 1.8rem;
   padding: 0.2rem 0;
   font-family: 'Roboto';
 }
+
 
 :root {
 	--header-outer-height: 110px;
@@ -107,8 +118,7 @@ a.navbar-brand {
 		var(--header-outer-height) - var(--header-inner-height)
 	);
 }
-
-.header-outer {
+header {
 	height: var(--header-outer-height);
 	position: sticky;
 	top: calc(
@@ -116,60 +126,53 @@ a.navbar-brand {
 	); /* Multiply by -1 to get a negative value */
 	display: flex;
 	align-items: center;
-  flex-shrink: 0; 
+  flex-shrink: 0;
   z-index: 10;
-  background-color: $white;
-	box-shadow: 0 2px 10px 0 rgba(0,0,0, 0.1);
+  background-color: white;
+  border-bottom: thin solid grey;
 }
 
-.header-inner {
-	/* Make it stick */
-	height: var(--header-inner-height);
+.navbar {
+  height: var(--header-inner-height);
 	position: sticky;
 	top: 0;
-
-	/* Other */
 	display: flex;
 	align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 2rem;
+}
+
+.nav-menu {
+    display: flex;
     justify-content: space-between;
-    width: 100%;
-    padding: 0 2rem;
+    align-items: center;
 }
 
-.header-navigation {
-	display: flex;
-	flex-wrap: wrap;
+
+.hamburger {
+  display: none;
 }
 
-.header-navigation a,
-.header-navigation button {
+#header.header_small {
+  box-shadow: 0 2px 10px 0 rgba(0,0,0, 0.1);
+  border: none;
+}
+
+.nav-menu a {
 	font-size: 1.125rem;
 	color: inherit;
 	margin-left: 1.75rem;
 	position: relative;
-	font-weight: 500;
+  font-weight: 500;
+  padding: 0.25rem 0;
 }
 
-.header-navigation a {
-	display: none;
-	font-size: 1.125rem;
-	color: inherit;
-	text-decoration: none;
-}
-
-.header-navigation button {
-	border: 0;
-	background-color: transparent;
-	padding: 0;
-}
-
-.header-navigation a:hover:after,
-.header-navigation button:hover:after {
+.nav-menu  a:hover:after {
 	transform: scalex(1);
 }
 
-.header-navigation a:after,
-.header-navigation button:after {
+.nav-menu  a:after {
 	transition: 0.25s ease;
 	content: "";
 	display: block;
@@ -182,91 +185,80 @@ a.navbar-brand {
 	left: 0;
 }
 
-@media (min-width: 768px) {
-	.header-navigation a {
-		display: inline-block;
-	}
-
-	.header-navigation button {
-		display: none;
-	}
-}
-
-@media (max-width:767px) {
-  .nav > .nav-btn {
-    display: inline-block;
-    position: absolute;
-    right: 0px;
-    top: 0px;
-  }
-  .nav > .nav-btn > label {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    padding: 13px;
-  }
-  .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
-    background-color: rgba(0, 0, 0, 0.3);
-  }
-  .nav > .nav-btn > label > span {
-    display: block;
-    width: 25px;
-    height: 10px;
-    border-top: 2px solid #eee;
-  }
-  .nav > .nav-links {
-    position: absolute;
-    display: block;
-    width: 100%;
-    background-color: #333;
-    height: 0px;
-    transition: all 0.3s ease-in;
-    overflow-y: hidden;
-    top: 50px;
-    left: 0px;
-  }
-  .nav > .nav-links > ul li a {
-    display: block;
-    width: 100%;
-  }
-}
-
-// burger menu
-
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-  position: relative;
-}
-
-.topnav #myLinks {
-  display: none;
-}
-
-.topnav a {
-  color: white;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  display: block;
-}
-
-.topnav a.icon {
-  background: black;
-  display: block;
-  position: absolute;
+.nav-menu a.active:after {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 2px;
+	background-color: $color_one;
+	position: absolute;
+	bottom: -2px;
+	left: 0;
   right: 0;
-  top: 0;
+  transform: none;
+  transition: none;
 }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #101010;
 }
 
-.active {
-  background-color: #04AA6D;
-  color: white;
+@media only screen and (max-width: 1020px) {
+    
+    header {
+      top: 0;
+    }
+    
+    .navbar {
+      height: var(--header-outer-height);
+    }
+    
+    .nav-menu {
+      position: fixed;
+      right: -100%;
+      padding: 0;
+      top: 5rem;
+      flex-direction: column;
+      background-color: #fff;
+      width: 100%;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+    }
+
+    .nav-menu.active {
+      right: 0;
+    }
+
+    .nav-item {
+      margin: 2.5rem 0;
+    }
+
+    .hamburger {
+      display: block;
+      cursor: pointer;
+      background: $white;
+      border: none;
+    }
+    
+    .hamburger.active .bar:nth-child(2) {
+      opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+      transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+      transform: translateY(-8px) rotate(-45deg);
+    }
+
 }
 
 //content
